css/main.css
/*
 * Main stylesheet. Theme modifications should be done here instead of the parent theme.
 */

/*
 * Table of Contents:
 *   o Override default styles from parent stylesheet
 *   o Global styles
 *   o Global plugin styling
 *   o Global page styling
 *   o Specific page styling
 *   o Media Queries
 */

/************************************************
 * Override default styles from parent stylesheet
 ************************************************/
/* Change vertical margins from default 0px. The theme doesn't provide options
   for configurating this. */
h1,
h2,
h3,
h4,
h5,
h6,
h1:first-child,
h2:first-child,
h3:first-child,
h4:first-child,
h5:first-child,
h6:first-child,
h1:last-child,
h2:last-child,
h3:last-child,
h4:last-child,
h5:last-child,
h6:last-child {
    margin: 0.6em 0;
}

/************************************************
 * Global styles
 ************************************************/
/* Add shadows on images, if desired. */
.child-image-shadow {
    -webkit-box-shadow: 0px 3px 7px 1px rgba(170,170,170,1);
    -moz-box-shadow: 0px 3px 7px 1px rgba(170,170,170,1);
    box-shadow: 0px 3px 7px 1px rgba(170,170,170,1);
}

/* Useful for adhoc indenting levels */
.child-indent-1 {
    margin-left: 1.3em;
}

/************************************************
 * Global plugin styling
 ************************************************/
/**************
 * Plugin: Popup Press
 * Welcome Popup (only for demo site)
 **************/
/* Style the background */
#popuppress-944 .pps-wrap {
    background-color: #f7f7f7;
}
#popuppress-944 img:first-child {
    margin-top: 0;
}

/* Let's remove the "I Disagree" cancellation button */
#popuppress-944 .pps-disclaimer-disagree {
    display: none;
    margin: 15px 0 0;
}
/* Change the "I Agree" button styling to match our theme */
#popuppress-944 .pps-disclaimer-agree {
    border: 1px solid #61bf4c;
    border-radius: 4px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    background-color: #61bf4c;
    font-weight: 600;
    margin-right: 0;
}
#popuppress-944 .pps-disclaimer-agree:hover {
    background-color: #8cd756;
    border: 1px solid #8cd756;
}
/* Remove the checkmark icon to the left */
#popuppress-944 .pps-disclaimer-agree::before {
    display: none;
}

/*
 * Plugin: Pullout Widgets
 * Pullout on right side of page (only for demo site)
 */
#pullouts .pullout-button span {
    font-weight: 600;
}

/* 
 * This will prevent the photo contained in the pullout from flashing on screen
 * as the page loads. See accompanying JS file.
 */
#pullout-1 img {
    display: none;
}

/**************
 * Plugin: AccessPress Social Icons
 **************/
/* The tooltip for the social icons need to be enlarged. */
.aps-each-icon .aps-icon-tooltip {
    font-size: 14px;
}

/**************
 * Plugin: Gravity Forms
 **************/
.gform_wrapper {
    margin-bottom: 0 !important;
}
.gform_wrapper .top_label label.gfield_label {
    padding-bottom: 0;
}
form input[type="text"],
form input[type="email"],
form textarea,
form select {
    border: 1px solid #999 !important;
    font-size: 14px !important;
    color: #464646 !important;
}
body .gform_wrapper {
    max-width: 100%;
}
/* Remove the top spacing above the Submit button. */
.gform_wrapper .gform_footer {
    margin-top: 0 !important;
    padding-top: 0 !important;
}

/* Style Submit button to match theme colors. */
body .gform_wrapper input[type="submit"] {
    color: #61bf4c !important;
    border: 1px solid #61bf4c !important;
}
body .gform_wrapper input[type="submit"]:hover {
    color: #fff !important;
    border: 1px solid #8cd756 !important;
    background-color: #8cd756 !important;
}

/**************
 * Plugin: Shortcodes Ultimate
 **************/
/*
 * Accordion Effect for All Pages
 */
.su-spoiler.child-spoiler {
    border: 1px solid #ccc;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    background: #f7f7f7;
    color: #464646;
}
.su-spoiler.child-spoiler .su-spoiler-title {
    border-bottom: 1px solid #ccc;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    background: #f7f7f7;
}
.su-spoiler.child-spoiler .su-spoiler-title .su-spoiler-icon,
.su-spoiler.su-spoiler-closed.child-spoiler.su-spoiler-title .su-spoiler-icon {
    left: 3px;
    background-color: #f7f7f7;
}
.su-spoiler.child-spoiler .su-spoiler-content {
    background-color: #f7f7f7;
    padding: 1em;
}

/**************
 * Plugin: Dropcaps
 **************/
/* Decrease font size. */
.wpsdc-drop-cap {
    padding: 0.3em 0.07em 0.25em 0 !important;
    font-size: 3.8em !important;
}

/************************************************
 * Global page styling
 ************************************************/
/**************
 * Menu
 **************/
/* When a page is viewed, the active menu options leading to the page should be green. */
nav.main_menu > ul > li.active > a.current,
nav.main_menu .second ul li.current-menu-item > a,
nav.main_menu ul li > a:hover {
    color: #61bf4c !important; /* green */
}

/**************
 * Mobile menu
 **************/
/* For those menu options that contain sub-menus, change the cursor from an 'I' to an arrow. */
nav.mobile_menu ul li.has_sub h3 {
    cursor: default;
}

/**************
 * Header
 **************/
/*
 * Page header banner with foreground image.
 * These are heading banners that contain only an image.
 */
.child-page-foreground-image-header {
    -webkit-box-shadow: 0px 3px 7px 1px rgba(170,170,170,1);
    -moz-box-shadow: 0px 3px 7px 1px rgba(170,170,170,1);
    box-shadow: 0px 3px 7px 1px rgba(170,170,170,1);
}
.child-page-foreground-image-header .vc_single_image-wrapper,
.child-page-foreground-image-header .vc_single_image-wrapper .vc_single_image-img {
    width: 100%;
}
/* ... */

